[workspace]
members = [
    "2015/day01",
    "2015/day02",
    "2015/day03",
    "2015/day04",
    "2015/day05",
    "2015/day06",
    "2015/day07",
    "2015/day09",
    "2015/day10",
    "2015/day11",
    "2015/day12",
    "2015/day13",
    "2015/day14",
    "2015/day15",
    "2015/day16",
    "2015/day17",
    "2015/day18",
    "2015/day19",
    "2015/day20",
    "2015/day21",
    "2015/day22",
    "2015/day23",
    "2015/day24",
    "2015/day25",
    "2022/day01",
    "2022/day02",
    "2022/day03",
    "2022/day04",
    "2022/day05",
    "2022/day06",
    "2022/day07",
    "2022/day08",
    "2022/day09",
    "2022/day10",
    "2022/day11",
    "2022/day12",
    "2022/day13",
    "2022/day14",
    "2022/day15",
    "2022/day16",
    "2022/day17",
    "2022/day18",
    "2022/day19",
    "2022/day20",
    "2022/day21",
    "2022/day22",
    "2022/day24",
    "2022/day25",
]
